--- a/app/src/main/res/drawable/style_btn_start.xml
+++ b/app/src/main/res/drawable/style_btn_start.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="15dp"/>
-    <solid android:color="@android:color/holo_blue_light"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="false">
+        <shape >
+            <corners android:radius="15dp"/>
+            <solid android:color="#FFD39B"/>
+            <stroke android:width="1dp" android:color="@android:color/transparent"/>
+        </shape>
+    </item>
+    <item android:state_pressed="true">
+        <shape >
+            <corners android:radius="15dp"/>
+            <solid android:color="#FFCC89"/>
+        </shape>
+    </item>
+</selector>
+
