--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:padding="5dp"
+        android:layout_gravity="center"
         android:visibility="gone"
         />
 
@@ -22,6 +23,7 @@
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:text="title"
+        android:textStyle="bold"
         android:layout_margin="10dp"
         android:padding="5dp"/>
     <ImageView
@@ -29,6 +31,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_confirm"
-        android:layout_margin="15dp"
+        android:layout_margin="19dp"
         />
 </LinearLayout>
